feat(overthebox): change unstable to alpha and testing to beta (#9145)
ref: UXCT-471

Signed-off-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>
Signed-off-by: CDS Translator Agent <opensource@ovh.net>
Co-authored-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>

--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_de_DE.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_de_DE.json
@@ -85,5 +85,7 @@
   "overTheBox_last_seen": "Letzter Zugang der Hardware über die Provisioning-Server",
   "overTheBox_last_seen_few_seconds": "Vor ein paar Sekunden",
   "overTheBox_last_seen_minutes_ago": "Es sind etwa {{lastSeenDiff}}",
-  "overTheBox_reverse_dns": "DNS Reverse"
+  "overTheBox_reverse_dns": "DNS Reverse",
+  "overTheBox_release_channel_beta": "Beta-Version",
+  "overTheBox_release_channel_alpha": "Alpha-Version"
 }
