--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_it_IT.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_it_IT.json
@@ -85,5 +85,7 @@
   "overTheBox_last_seen": "Ultimo accesso dell'hardware dai server di provisioning",
   "overTheBox_last_seen_few_seconds": "Qualche secondo fa",
   "overTheBox_last_seen_minutes_ago": "Ci sono circa {{lastSeenDiff}}",
-  "overTheBox_reverse_dns": "Reverse DNS"
+  "overTheBox_reverse_dns": "Reverse DNS",
+  "overTheBox_release_channel_beta": "Versione beta",
+  "overTheBox_release_channel_alpha": "Versione alpha"
 }
