--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_pl_PL.json
@@ -85,5 +85,7 @@
   "overTheBox_last_seen": "Ostatni dostęp do sprzętu z serwerów programowania",
   "overTheBox_last_seen_few_seconds": "Kilka sekund temu",
   "overTheBox_last_seen_minutes_ago": "Około {{lastSeenDiff}}",
-  "overTheBox_reverse_dns": "Rewers DNS"
+  "overTheBox_reverse_dns": "Rewers DNS",
+  "overTheBox_release_channel_beta": "Wersja beta",
+  "overTheBox_release_channel_alpha": "Wersja alfa"
 }
