--- a/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
@@ -3,13 +3,15 @@
   "iam_action_select_action_search_label": "Rechercher une action",
   "iam_action_select_all_actions_description": "[TODO] iam_action_select_all_actions_description",
   "iam_action_select_all_actions_label": "Autoriser toutes les actions",
-  "iam_action_select_category_count_many": "({{ selected }} actions sélectionnées / {{ total }})",
-  "iam_action_select_category_count_one": "(1 action sélectionnée / {{ total }})",
-  "iam_action_select_category_count_zero": "({{ total }} actions)",
+  "iam_action_select_category_count_selection_many": "({{ selected }} actions sélectionnées / {{ total }})",
+  "iam_action_select_category_count_selection_one": "(1 action sélectionnée / {{ total }})",
+  "iam_action_select_category_count_no_selection_many": "({{ total }} actions)",
+  "iam_action_select_category_count_no_selection_one": "(1 action)",
   "iam_action_select_custom_action_button": "Ajouter",
   "iam_action_select_custom_action_error_exist": "Cette action a déjà été ajoutée ou sélectionnée",
   "iam_action_select_custom_action_label": "Ajouter manuellement des actions",
   "iam_action_select_custom_action_success_created": "L'action {{ action }} a été ajoutée à {{ resourceType }}",
   "iam_action_select_custom_action_success_selected": "L'action {{ action }} a été sélectionnée dans {{ resourceType }}",
+  "iam_action_select_custom_action_success_wildcard": "« Autoriser toutes les actions » a été activé",
   "iam_action_select_error_required": "Vous devez sélectionner au moins une action, autoriser toutes les actions, ou ajouter une action manuellement"
 }
