--- a/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_it_IT.json
@@ -2,7 +2,7 @@
   "ip_byoip_disclaimer_title": "Conferma necessaria",
   "ip_byoip_disclaimer_description": "Dichiaro: ",
   "ip_byoip_disclaimer_description_point_1": " - di essere il proprietario della classe di indirizzi IP inserita",
-  "ip_byoip_disclaimer_description_point_2": " - che la classe di indirizzi IP inserita non è annunciata su Internet",
+  "ip_byoip_disclaimer_description_point_2": " - Fare in modo che la classe di indirizzi IP inseriti non sia annunciata su Internet da più reti simultaneamente (multi-homing)",
   "ip_byoip_disclaimer_description_point_3": " - di avere una buona reputazione su questa classe di indirizzi IP",
   "ip_byoip_disclaimer_confirm_text": "Conferma",
   "ip_byoip_disclaimer_cancel_text": "Annulla"
