--- a/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_pl_PL.json
@@ -2,7 +2,7 @@
   "ip_byoip_disclaimer_title": "Wymagane potwierdzenie",
   "ip_byoip_disclaimer_description": "Oświadczam, że: ",
   "ip_byoip_disclaimer_description_point_1": " - jestem właścicielem wskazanego zakresu adresów IP",
-  "ip_byoip_disclaimer_description_point_2": " - wskazany zakres adresów IP nie jest rozgłaszany w Internecie",
+  "ip_byoip_disclaimer_description_point_2": " - Zobowiązuję się dopilnować, aby określony zakres adresów IP nie był ogłaszany w Internecie przez kilka sieci jednocześnie (multi-homing)",
   "ip_byoip_disclaimer_description_point_3": " - wskazany zakres adresów IP posiada pozytywną reputację",
   "ip_byoip_disclaimer_confirm_text": "Zatwierdź",
   "ip_byoip_disclaimer_cancel_text": "Anuluj"
