--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_fr_FR.json
@@ -1,11 +1,17 @@
 {
-  "pci_app_submit_select_image_preset_info": "Description",
+  "pci_app_submit_select_image_tile_custom_label": "Utilisez votre propre Docker image",
+  "pci_app_submit_select_image_tile_custom_description": "Déployez facilement votre propre application depuis une image Docker personnalisée",
+  "pci_app_submit_select_image_tile_preset_label": "Découvrez notre catalogue d'apps prêtes à l'emploi",
+  "pci_app_submit_select_image_tile_preset_description": "Déployez facilement l'application de votre choix parmi nos modèles partenaires",
+  "pci_app_submit_select_image_preset_info": "Choisissez parmi le catalogue d'applications suivantes afin d'accélérer la mise à disposition de vos services :",
+  "pci_app_submit_select_image_preset_conditions_checkbox": "Je certifie avoir lu et accepté les confitions partenaires",
+  "pci_app_submit_select_image_preset_conditions_link": "Lire les conditions partenaires",
   "pci_app_submit_select_image_advanced_tips": "Déployer votre propre application",
   "pci_app_submit_select_image_advanced": "Déployer votre propre application (image Docker)",
   "pci_app_submit_select_image_tips": "Renseigner le chemin d'accès de votre image Docker. Cela peut être un registre public (GitHub, Gitlab, DockerHub, ...) ou privé.",
-  "pci_app_submit_select_image_info_message_1": "Veillez à configurer votre registre si celui-ci est privé.",
-  "pci_app_submit_select_image_info_message_2": "Veuillez noter que l'image doit être construite avec une architecture AMD {{architectures}}. L'utilisation de docker-compose n'est pas possible.",
-  "pci_app_submit_select_image_info_message_3": "Veillez à donner les bons droits d'accès à l'utilisateur OVHcloud (user=42420:42420) afin que votre image se lance correctement:",
+  "pci_app_submit_select_image_info_message_1": "Si votre image Docker est dans un registre privé, veillez à l'ajouter avant comme registre autorisé.",
+  "pci_app_submit_select_image_info_message_2": "Veuillez noter que votre image doit être construite avec la plateforme Docker {{architectures}}. L'utilisation de docker-compose n'est pas possible.",
+  "pci_app_submit_select_image_info_message_3": "Veillez à vous assurer que l'utilisateur OVHcloud (42420:42420) a les permissions nécessaires pour lancer les process de votre image.",
   "pci_app_submit_select_image_info_custom_doc": "Pour plus d'information, n'hésitez pas à consulter notre documentation",
   "pci_app_submit_select_image_name": "Chemin d'accès de votre image Docker",
   "pci_app_submit_select_image_tips_help": "Les images hébergées sur une registre privé ou public sont acceptées (GitHub, GitLab, DockerHub, ...)",
