fix(i18n): add missing translations [CDS 2249]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_pl_PL.json
@@ -8,5 +8,73 @@
   "dedicatedCloud_datacenters_order_datastore": "Zamów Datastore",
   "dedicatedCloud_datacenters_loading_error": "Wystąpił błąd podczas pobierania informacji z centrów danych.",
   "dedicatedCloud_datacenters_commercialRange": "Gama",
-  "dedicatedCloud_datacenters_add_not_available": "Dodanie nowego centrum danych nie jest aktualnie dostępne. Pracujemy nad udostępnieniem tej funkcji w najbliższym czasie."
+  "dedicatedCloud_datacenters_add_not_available": "Dodanie nowego centrum danych nie jest aktualnie dostępne. Pracujemy nad udostępnieniem tej funkcji w najbliższym czasie.",
+  "dedicatedCloud_datacenters_commercial_name_DC": "Dedicated Cloud",
+  "dedicatedCloud_datacenters_commercial_name_DC-HDS": "Dedicated Cloud HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-HIPAA": "Dedicated Cloud HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX": "Dedicated Cloud z NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX-VROPS": "Dedicated Cloud z NSX i vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-PCIDSS": "Dedicated Cloud PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-VROPS": "Dedicated Cloud z vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY": "Dedicated Cloud Legacy",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HDS": "Dedicated Cloud Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HIPAA": "Dedicated Cloud Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX": "Dedicated Cloud Legacy z NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX-VROPS": "Dedicated Cloud Legacy z NSX i vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-PCIDSS": "Dedicated Cloud Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-VROPS": "Dedicated Cloud Legacy z vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT": "Dedicated Cloud Ancestral",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HDS": "Dedicated Cloud Ancestral HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HIPAA": "Dedicated Cloud Ancestral HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX": "Dedicated Cloud Ancestral z NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX-VROPS": "Dedicated Cloud Ancestral z NSX oraz vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-PCIDSS": "Dedicated Cloud Ancestral PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-VROPS": "Dedicated Cloud Ancestral z vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HDS": "Essentials HDS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HIPAA": "Essentials HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX": "Essentials z NSX",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX-VROPS": "Essentials z NSX i vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-PCIDSS": "Essentials PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-UNKNOWN": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-VROPS": "Essentials z vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HDS": "Premier HDS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HIPAA": "Premier HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX": "Premier z NSX",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX-VROPS": "Premier z NSX i vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-PCIDSS": "Premier PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-UNKNOWN": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-VROPS": "Premier z vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC": "SDDC",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HDS": "SDDC HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HIPAA": "SDDC HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-PCIDSS": "SDDC PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS": "SDDC z vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS-WITHOUT-NSX": "SDDC z vROps bez NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-WITHOUT-NSX": "SDDC bez NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY": "SDDC Legacy",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HDS": "SDDC Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HIPAA": "SDDC Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-PCIDSS": "SDDC Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS": "SDDC Legacy z vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS-WITHOUT-NSX": "SDDC Legacy z vROps bez NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-WITHOUT-NSX": "SDDC Legacy bez NSX",
+  "dedicatedCloud_datacenters_commercial_name_UNKNOWN-UNKNOWN": "Nieznany",
+  "dedicatedCloud_datacenters_commercial_name_vSphere": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-VROPS": "vSphere z vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX-VROPS": "vSphere z vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HDS": "NSX HDS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-PCIDSS": "NSX PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS": "NSX z vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX-VROPS": "NSX z vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX"
 }
