--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_de_DE.json
@@ -8,5 +8,73 @@
   "dedicatedCloud_datacenters_order_datastore": "Datastore bestellen",
   "dedicatedCloud_datacenters_loading_error": "Beim Laden der Datacenter-Informationen ist ein Fehler aufgetreten.",
   "dedicatedCloud_datacenters_commercialRange": "Reihe",
-  "dedicatedCloud_datacenters_add_not_available": "Das Hinzufügen neuer Datacenter ist aktuell nicht möglich. Wir arbeiten daran, diese Funktion in Kürze zur Verfügung zu stellen."
+  "dedicatedCloud_datacenters_add_not_available": "Das Hinzufügen neuer Datacenter ist aktuell nicht möglich. Wir arbeiten daran, diese Funktion in Kürze zur Verfügung zu stellen.",
+  "dedicatedCloud_datacenters_commercial_name_DC": "Dedicated Cloud",
+  "dedicatedCloud_datacenters_commercial_name_DC-HDS": "Dedicated Cloud HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-HIPAA": "Dedicated Cloud HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX": "Dedicated Cloud mit NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX-VROPS": "Dedicated Cloud mit NSX &amp; vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-PCIDSS": "Dedicated Cloud PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-VROPS": "Dedicated Cloud mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY": "Dedicated Cloud Legacy",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HDS": "Dedicated Cloud Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HIPAA": "Dedicated Cloud Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX": "Dedicated Cloud Legacy mit NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX-VROPS": "Dedicated Cloud Legacy mit NSX &amp; vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-PCIDSS": "Dedicated Cloud Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-VROPS": "Dedicated Cloud Legacy mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT": "Dedicated Cloud Ancestral",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HDS": "Dedicated Cloud Ancestral HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HIPAA": "Dedicated Cloud Ancestral HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX": "Dedicated Cloud Ancestral mit NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX-VROPS": "Dedicated Cloud Ancestral mit NSX und vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-PCIDSS": "Dedicated Cloud Ancestral PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-VROPS": "Dedicated Cloud Ancestral mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HDS": "Essentials HDS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HIPAA": "Essentials HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX": "Essentials mit NSX",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX-VROPS": "Essentials mit NSX und vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-PCIDSS": "Essentials PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-UNKNOWN": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-VROPS": "Essentials mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HDS": "Premier HDS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HIPAA": "Premier HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX": "Premier mit NSX",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX-VROPS": "Premier mit NSX und vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-PCIDSS": "Premier PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-UNKNOWN": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-VROPS": "Premier mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC": "SDDC",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HDS": "SDDC HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HIPAA": "SDDC HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-PCIDSS": "SDDC PCI ",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS": "SDDC mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS-WITHOUT-NSX": "SDDC mit vROps &amp; ohne NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-WITHOUT-NSX": "SDDC ohne NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY": "SDDC Legacy",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HDS": "SDDC Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HIPAA": "SDDC Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-PCIDSS": "SDDC Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS": "SDDC Legacy mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS-WITHOUT-NSX": "SDDC Legacy mit vROps &amp; ohne NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-WITHOUT-NSX": "SDDC Legacy ohne NSX",
+  "dedicatedCloud_datacenters_commercial_name_UNKNOWN-UNKNOWN": "Unbekannt",
+  "dedicatedCloud_datacenters_commercial_name_vSphere": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-VROPS": "vSphere mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX-VROPS": "vSphere mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HDS": "NSX HDS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-PCIDSS": "NSX PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS": "NSX mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX-VROPS": "NSX mit vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX"
 }
