--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_CA.json
@@ -8,5 +8,73 @@
   "dedicatedCloud_datacenters_order_host": "Commander un Host",
   "dedicatedCloud_datacenters_order_datastore": "Commander un Datastore",
   "dedicatedCloud_datacenters_loading_error": "Une erreur est survenue lors du chargement des informations des datacentres.",
-  "dedicatedCloud_datacenters_add_not_available": "L’ajout de nouveau datacentre n’est pas disponible pour le moment. Nous travaillons à rendre cette fonctionnalité disponible très prochainement."
+  "dedicatedCloud_datacenters_add_not_available": "L’ajout de nouveau datacentre n’est pas disponible pour le moment. Nous travaillons à rendre cette fonctionnalité disponible très prochainement.",
+  "dedicatedCloud_datacenters_commercial_name_DC": "Dedicated Cloud",
+  "dedicatedCloud_datacenters_commercial_name_DC-HDS": "Dedicated Cloud HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-HIPAA": "Dedicated Cloud HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX": "Dedicated Cloud avec NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-NSX-VROPS": "Dedicated Cloud avec NSX et vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-PCIDSS": "Dedicated Cloud PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-VROPS": "Dedicated Cloud avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY": "Dedicated Cloud Legacy",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HDS": "Dedicated Cloud Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-HIPAA": "Dedicated Cloud Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX": "Dedicated Cloud Legacy avec NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-NSX-VROPS": "Dedicated Cloud Legacy avec NSX et vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-PCIDSS": "Dedicated Cloud Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-LEGACY-VROPS": "Dedicated Cloud Legacy avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT": "Dedicated Cloud Ancestral",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HDS": "Dedicated Cloud Ancestral HDS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-HIPAA": "Dedicated Cloud Ancestral HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX": "Dedicated Cloud Ancestral avec NSX",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-NSX-VROPS": "Dedicated Cloud Ancestral avec NSX et vROps",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-PCIDSS": "Dedicated Cloud Ancestral PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_DC-ANCIENT-VROPS": "Dedicated Cloud Ancestral avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HDS": "Essentials HDS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-HIPAA": "Essentials HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX": "Essentials avec NSX",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-NSX-VROPS": "Essentials avec NSX et vROps",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-PCIDSS": "Essentials PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-UNKNOWN": "Essentials",
+  "dedicatedCloud_datacenters_commercial_name_ESSENTIALS-VROPS": "Essentials avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HDS": "Premier HDS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-HIPAA": "Premier HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX": "Premier avec NSX",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-NSX-VROPS": "Premier avec NSX et vROps",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-PCIDSS": "Premier PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-UNKNOWN": "Premier",
+  "dedicatedCloud_datacenters_commercial_name_PREMIER-VROPS": "Premier avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC": "SDDC",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HDS": "SDDC HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-HIPAA": "SDDC HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-PCIDSS": "SDDC PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS": "SDDC avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-VROPS-WITHOUT-NSX": "SDDC avec vROps &amp; sans NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-WITHOUT-NSX": "SDDC sans NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY": "SDDC Legacy",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HDS": "SDDC Legacy HDS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-HIPAA": "SDDC Legacy HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-PCIDSS": "SDDC Legacy PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS": "SDDC Legacy avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-VROPS-WITHOUT-NSX": "SDDC Legacy avec vROps &amp; sans NSX",
+  "dedicatedCloud_datacenters_commercial_name_SDDC-LEGACY-WITHOUT-NSX": "SDDC Legacy sans NSX",
+  "dedicatedCloud_datacenters_commercial_name_UNKNOWN-UNKNOWN": "Inconnu",
+  "dedicatedCloud_datacenters_commercial_name_vSphere": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-NSX-VROPS": "vSphere avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_vSphere-UNKNOWN": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HDS": "NSX HDS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-HIPAA": "NSX HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-PCIDSS": "NSX PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS": "NSX avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX-VROPS": "NSX avec vROps",
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX"
 }
