--- a/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/ip/byoip/disclaimer/translations/Messages_en_GB.json
@@ -2,7 +2,7 @@
   "ip_byoip_disclaimer_title": "Confirmation required",
   "ip_byoip_disclaimer_description": "I declare that: ",
   "ip_byoip_disclaimer_description_point_1": " - I am the owner of the IP address range I have entered.",
-  "ip_byoip_disclaimer_description_point_2": " - Agree to ensure that the IP address range entered is not announced on the internet by several networks simultaneously (multi-homing).",
+  "ip_byoip_disclaimer_description_point_2": " - I agree to ensure that the IP address range entered is not announced on the internet by several networks simultaneously (multi-homing).",
   "ip_byoip_disclaimer_description_point_3": " - This IP address range has a healthy reputation.",
   "ip_byoip_disclaimer_confirm_text": "Confirm",
   "ip_byoip_disclaimer_cancel_text": "Cancel"
