fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_es_ES.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_es_ES.json
@@ -45,6 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Añada hasta {{ max }} dominios",
   "telecom_pack_migration_domain_additional_text": "por dominio",
   "telecom_pack_migration_gtr_title": "GTR (si soportado)",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10 HO ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPTION CONFORT 5M ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPTION CONFORT 5M ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPTION CONFORT 20M ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPTION CONFORT 20M ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_no_gtr": "Sin GTR",
   "telecom_pack_migration_offer_choice": "Elección del producto",
   "telecom_pack_migration_offer_choice_error_loading": "¡Vaya! No hemos podido cargar los productos disponibles para su pack.",
   "telecom_pack_migration_offer_choice_no_offers": "No hay ningún cambio de producto disponible para su producto actual.",
@@ -135,7 +142,6 @@
   "telecom_pack_migration_building_details_floor": "Etage",
   "telecom_pack_migration_building_details_confirm": "Confirmer la sélection",
   "telecom_pack_migration_building_details_none": "Ninguno",
-  "telecom_pack_migration_building_details_unknµ%§mlkjle": "Référence des bâtiments pour les offres FTTH",
   "telecom_pack_migration_pto_title": "Boîtier Fibre PTO (Point de Terminaison Optique)",
   "telecom_pack_migration_pto_description": "Disposez-vous déjà d'un boitier fibre à l'adresse d'installation ? (prise optique murale)",
   "telecom_pack_migration_pto_check_yes": "Oui je dispose d'un boîter PTO",
@@ -148,10 +154,24 @@
   "telecom_pack_migration_pto_no_description": "Un técnico realizará la instalación de una toma óptica (PTO) durante su intervención.",
   "telecom_pack_migration_pto_yes_not_known": "J'ai un boîtier mais je ne connais pas son numéro",
   "telecom_pack_migration_pto_yes_not_known_description": "¿Ha comprobado que no dispone de la referencia de la toma óptica (PTO)? Esto podría afectar al tiempo de conexión.",
+  "telecom_pack_migration_promotion_description": "Promoción disponible hasta el {{ endDate }}",
+  "telecom_pack_migration_promotion_subscription_months_offered": "{{ duration }} meses gratis",
   "telecom_pack_migration_promotion_installation_fees_offered": "Sin gastos de instalación",
+  "telecom_pack_migration_confirm_promotion": "Los gastos de instalación y los {{ duration }} primeros meses de la nueva suscripción son gratuitos (sin incluir el alquiler de módem, las opciones adicionales o los gastos de transporte).",
+  "telecom_pack_migration_confirm_first_year_promo": "Descuento el primer año",
+  "telecom_pack_migration_confirm_modem_rental": "Alquiler módem",
   "telecom_pack_migration_confirm_provider_infra": "Gastos adicionales",
   "telecom_pack_migration_confirm_comfort_activation": "Los gastos de activación de la opción Confort son de {{ price }} + IVA",
   "telecom_pack_migration_confirm_install_fees": "Los gastos de instalación son de {{ price }} + IVA",
+  "telecom_pack_migration_pack_access_error": "No hemos podido cargar la información de su pack.",
+  "telecom_pack_migration_buildings_title": "Edificios asociados a la línea",
+  "telecom_pack_migration_buildings_available": "Hemos encontrado los siguientes edificios asociados a su línea. Por favor, seleccione un edificio.",
+  "telecom_pack_migration_buildings_name": "Nombre",
+  "telecom_pack_migration_buildings_reference": "Referencia",
+  "telecom_pack_migration_buildings_nro": "ODN",
+  "telecom_pack_migration_buildings_type": "Tipo",
+  "telecom_pack_migration_buildings_actions": "Acción",
+  "telecom_pack_migration_buildings_select_building": "Seleccionar",
   "telecom_pack_migration_confirm_resume_contact_owner": "Datos de contacto",
   "telecom_pack_migration_confirm_resume_contact_phone": "Número de teléfono de contacto",
   "telecom_pack_migration_confirm_resume_phone_form_error": "El número introducido debe ser válido.",
@@ -159,17 +179,10 @@
   "telecom_pack_migration_modem_yes": "Quiero contratar un módem nuevo ({{ price }}/mes + IVA)",
   "telecom_pack_migration_modem_recycled": "Quiero contratar un módem reciclable ({{ price }}/mes + IVA)",
   "telecom_pack_migration_modem_no": "No quiero un módem",
+  "telecom_pack_migration_modem_keep": "Quiero conservar mi módem ({{ price }}/mes + IVA)",
   "telecom_pack_migration_modem_required": "La selección de un tipo de módem es obligatoria.",
   "telecom_pack_migration_offers_debit_mention_1": "(1) Hasta 92 Mbps que descenden en VDSL y 22 Mbps en ADSL, en función de los requisitos.",
   "telecom_pack_migration_offers_debit_mention_2": "(2) Hasta 36 MB/s en VDSL y 1 Mb/s en ADSL, en función de los requisitos.",
-  "telecom_pack_migration_modem_keep": "Quiero conservar mi módem ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10 HO ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPTION CONFORT 5M ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPTION CONFORT 5M ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPTION CONFORT 20M ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPTION CONFORT 20M ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_no_gtr": "Sin GTR",
   "telecom_pack_migration_meeting_slots": "Reserva de citas",
   "telecom_pack_migration_meeting_description": "La solución que ha seleccionado requiere la intervención de un técnico.",
   "telecom_pack_migration_fake_meeting": "No me conviene ninguna de las citas de abajo. Quiero que un técnico contacte conmigo para acordar otra franja horaria.",
@@ -184,19 +197,5 @@
   "telecom_pack_migration_contract_action_create": "Se va a crear una nueva línea en la dirección:",
   "telecom_pack_migration_contract_meeting": "Se ha programado una cita el {{ day }} entre {{ start }} y {{ end }}.",
   "telecom_pack_migration_contract_meeting_contact": "Un técnico se pondrá en contacto conmigo para acordar una cita.",
-  "telecom_pack_migration_meeting_error": "¡Vaya! Se ha producido un error al cargar las fechas disponibles.",
-  "telecom_pack_migration_promotion_description": "Promoción disponible hasta el {{ endDate }}",
-  "telecom_pack_migration_promotion_subscription_months_offered": "{{ duration }} meses gratis",
-  "telecom_pack_migration_confirm_promotion": "Los gastos de instalación y los {{ duration }} primeros meses de la nueva suscripción son gratuitos (sin incluir el alquiler de módem, las opciones adicionales o los gastos de transporte).",
-  "telecom_pack_migration_confirm_first_year_promo": "Descuento el primer año",
-  "telecom_pack_migration_confirm_modem_rental": "Alquiler módem",
-  "telecom_pack_migration_pack_access_error": "No hemos podido cargar la información de su pack.",
-  "telecom_pack_migration_buildings_title": "Edificios asociados a la línea",
-  "telecom_pack_migration_buildings_available": "Hemos encontrado los siguientes edificios asociados a su línea. Por favor, seleccione un edificio.",
-  "telecom_pack_migration_buildings_name": "Nombre",
-  "telecom_pack_migration_buildings_reference": "Referencia",
-  "telecom_pack_migration_buildings_nro": "ODN",
-  "telecom_pack_migration_buildings_type": "Tipo",
-  "telecom_pack_migration_buildings_actions": "Acción",
-  "telecom_pack_migration_buildings_select_building": "Seleccionar"
+  "telecom_pack_migration_meeting_error": "¡Vaya! Se ha producido un error al cargar las fechas disponibles."
 }
