--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
@@ -45,6 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Ajoutez jusqu'à {{ max }} domaines",
   "telecom_pack_migration_domain_additional_text": "/domaine",
   "telecom_pack_migration_gtr_title": "GTR (si éligible)",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_no_gtr": "Brak GTR",
   "telecom_pack_migration_offer_choice": "Choix de l'offre",
   "telecom_pack_migration_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
   "telecom_pack_migration_offer_choice_no_offers": "Aucun changement d'offre n'est disponible avec votre offre actuelle.",
@@ -121,6 +128,7 @@
   "telecom_pack_migration_confirm_service_to_keep_table_service_names": "Nazwy usług do zachowania",
   "telecom_pack_migration_shipping_contact": "Contact de livraison",
   "telecom_pack_migration_shipping_mode": "Mode de livraison",
+  "telecom_pack_migration_building_details_error": "Wystąpił błąd podczas pobierania informacji o budynku",
   "telecom_pack_migration_building_details_select_engagment": "Veuillez choisir votre engagement",
   "telecom_pack_migration_building_details_engagment_month": "miesiąc",
   "telecom_pack_migration_building_details_select_building": "Veuillez indiquer votre bâtiment",
@@ -143,7 +151,11 @@
   "telecom_pack_migration_pto_reference": "Wprowadź numer Twojego sieciowego terminala optycznego",
   "telecom_pack_migration_pto_where": "Gdzie znajdę numer sieciowego terminala optycznego?",
   "telecom_pack_migration_pto_where_description": "Numer terminala znajdziesz na obudowie. Składa się on ze znaków alfanumerycznych zapisanych w postaci ciągu: OO-XXXX-XXXX /C",
+  "telecom_pack_migration_pto_yes": "Mam obudowę z następującym numerem",
+  "telecom_pack_migration_pto_yes_description": "Zmiażdżymy istniejące gniazdo optyczne (PTO).",
+  "telecom_pack_migration_pto_no_description": "Technik przeprowadzi instalację gniazdka optycznego (PTO) podczas interwencji.",
   "telecom_pack_migration_pto_yes_not_known": "Na obudowie nie ma numeru",
+  "telecom_pack_migration_pto_yes_not_known_description": "Czy sprawdziłeś, czy nie masz punktu odniesienia dla gniazda optycznego (PTO)? Może to mieć wpływ na czas połączenia.",
   "telecom_pack_migration_promotion_description": "Promocja ważna do {{endDate}}",
   "telecom_pack_migration_promotion_subscription_months_offered": "{{duration}} miesiąc/e gratis",
   "telecom_pack_migration_promotion_installation_fees_offered": "Brak opłaty instalacyjnej",
@@ -169,15 +181,10 @@
   "telecom_pack_migration_modem_yes": "Chcę zamówić nowy modem ({{ price }} netto / m-c)",
   "telecom_pack_migration_modem_recycled": "Chcę skorzystać z modemu z recyklingu ({{ price }} netto / m-c)",
   "telecom_pack_migration_modem_no": "Nie chcę modemu",
+  "telecom_pack_migration_modem_keep": "Chcę zachować modem ({{ price }} netto/m-c)",
   "telecom_pack_migration_modem_required": "Wybór typu modemu jest obowiązkowy",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Wynajem modemu z recyklingu",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_no_gtr": "Brak GTR",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Prędkość pobierania do 92 Mbps w VDSL i 22 Mbps w ADSL, pod warunkiem dostępności.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Prędkość pobierania do 36 Mbps w VDSL i 1 Mbps w ADSL, pod warunkiem dostępności.",
   "telecom_pack_migration_meeting_slots": "Umówienie wizyty",
   "telecom_pack_migration_meeting_description": "Wybrana przez Ciebie oferta wymaga interwencji technika.",
   "telecom_pack_migration_no_fake_meeting": "Wybieram harmonogram randkowy.",
@@ -191,14 +198,5 @@
   "telecom_pack_migration_contract_action_create": "Nowa linia zostanie utworzona na stronie:",
   "telecom_pack_migration_contract_meeting": "Spotkanie zostało zaplanowane na {{ day }} między {{ start }} i {{ end }}.",
   "telecom_pack_migration_contract_meeting_contact": "Skontaktujemy się z nim przez technika, aby umówić się na spotkanie.",
-  "telecom_pack_migration_meeting_error": "Ojej! Wystąpił błąd podczas pobierania dat dostępnych spotkań.",
-  "telecom_pack_migration_modem_keep": "Chcę zachować modem ({{ price }} netto/m-c)",
-  "telecom_pack_migration_confirm_modem_rental_yes": "Dzierżawa nowego modemu",
-  "telecom_pack_migration_offers_debit_mention_1": "(1) Prędkość pobierania do 92 Mbps w VDSL i 22 Mbps w ADSL, pod warunkiem dostępności.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Prędkość pobierania do 36 Mbps w VDSL i 1 Mbps w ADSL, pod warunkiem dostępności.",
-  "telecom_pack_migration_building_details_error": "Wystąpił błąd podczas pobierania informacji o budynku",
-  "telecom_pack_migration_pto_yes": "Mam obudowę z następującym numerem",
-  "telecom_pack_migration_pto_yes_description": "Zmiażdżymy istniejące gniazdo optyczne (PTO).",
-  "telecom_pack_migration_pto_no_description": "Technik przeprowadzi instalację gniazdka optycznego (PTO) podczas interwencji.",
-  "telecom_pack_migration_pto_yes_not_known_description": "Czy sprawdziłeś, czy nie masz punktu odniesienia dla gniazda optycznego (PTO)? Może to mieć wpływ na czas połączenia."
+  "telecom_pack_migration_meeting_error": "Ojej! Wystąpił błąd podczas pobierania dat dostępnych spotkań."
 }
