feat(dedicated): add kyc document upload section
ref: MANAGER-11157

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
@@ -1,3 +1,17 @@
 {
-  "user_account_identity_documents": "Mes documents d'identité"
+  "user_account_identity_documents": "Mes documents d'identité",
+  "user_account_identity_documents_sub_title": "Déposez vos documents",
+  "user_account_identity_documents_intro": "Vous avez souhaité créer votre compte ou faire une commande depuis notre site Indien. La règlementation en vigueur nécessite une vérification de votre identité avant tout commande.",
+  "user_account_identity_documents_list_for_particular": "Vous êtes un particulier, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile.",
+  "user_account_identity_documents_list_for_enterprise": "Vous êtes une entreprise, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST.",
+  "user_account_identity_documents_list_for_association": "Vous êtes une association, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST (optionnel).",
+  "user_account_identity_documents_list_for_institution": "Vous êtes une association, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST (optionnel).",
+  "user_account_identity_documents_list_for_others": "Voici les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST (optionnel).",
+  "user_account_identity_documents_descriptiom": "Les documents seront conservés durant 5 ans après la fin du contrat.",
+  "user_account_identity_documents_selection_file_format": "Format: jpg, jpeg, pdf, png Taille maximale: 100 mo.",
+  "user_account_identity_documents_submit": "Envoyer mes documents",
+  "user_account_identity_documents_submit_success_message_title": "Merci, nous avons bien reçu vos documents!",
+  "user_account_identity_documents_submit_success_message_description": "Nous avons bien reçu l’ensemble de vos documents. Ils seront soumis à validation auprès de nos équipes. Vous serez informé par email de leur validation ou vous serez contacté si nous avons besoin d’informations complémentaires.",
+  "user_account_identity_documents_submit_error_message_description": "Vos documents n’ont pas été correctement envoyés. Veuillez refaire l’upload et l’envoi de vos documents",
+  "user_account_identity_documents_go_back_to_dashboard": "Voir mon tableau de bord"
 }
