feat(dedicated.nasha): force reload all the page language changed
ref: MANAGER-11287

--- a/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_it_IT.json
+++ b/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_it_IT.json
@@ -1,3 +1,6 @@
 {
-  "title": "Informazioni generali"
+  "title": "Informazioni generali",
+  "subscriptions": "Abbonamento",
+  "configurations": "Configurazione",
+  "informations": "Informazioni"
 }
