--- a/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_fr_FR.json
+++ b/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_fr_FR.json
@@ -1,3 +1,7 @@
 {
-  "title": "Informations générales"
+  "title": "Informations générales",
+  "subscriptions": "Abonnement",
+  "configurations": "Configurations",
+  "partitions": "Partitions",
+  "informations": "Informations"
 }
