--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
@@ -735,5 +735,9 @@
   "ip_unused_banner_text": "Disponi di indirizzi IP non utilizzati. Gli indirizzi IPv4 sono una risorsa sempre più rara. Se non effettivamente necessari, consigliamo pertanto di liberarli.",
   "ip_unused_banner_link": "Visualizza i miei IP non utilizzati",
   "ip_table_header_campus": "Campus",
-  "ip_repricing_banner_list_item_1": "Dal 6 ottobre 2022, per i nuovi indirizzi."
+  "ip_repricing_banner_list_item_1": "Dal 6 ottobre 2022, per i nuovi indirizzi.",
+  "show_all_ips": "Mostrare gli IPv4 e IPv6",
+  "show_ipv4_ips": "Mostrare gli IPv4",
+  "show_ipv6_ips": "Mostrare gli IPv6",
+  "ipv4_ipv6_filter_title": "Filtro IPv4/IPv6"
 }
