--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_es_ES.json
@@ -735,5 +735,9 @@
   "ip_repricing_banner_list_item_2": "A partir del 1 de diciembre de 2022 para las direcciones existentes (contratadas antes del 6 de octubre de 2022).",
   "ip_repricing_banner_link": "Más información",
   "ip_unused_banner_text": "Tiene direcciones IP no utilizadas. Las direcciones IPv4 son un recurso cada vez más escaso, por lo que, si no las necesita, le recomendamos que las libere.",
-  "ip_unused_banner_link": "Ver mis direcciones IP no utilizadas."
+  "ip_unused_banner_link": "Ver mis direcciones IP no utilizadas.",
+  "show_all_ips": "Mostrar las IPv4 e IPv6",
+  "show_ipv4_ips": "Mostrar las IPv4",
+  "show_ipv6_ips": "Mostrar las IPv6",
+  "ipv4_ipv6_filter_title": "Filtro IPv4/IPv6"
 }
