--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_CA.json
@@ -12,6 +12,10 @@
   "ip_ipv4": "IPv4",
   "ip_ipv6": "IPv6",
   "ip_ipblock": "IP Block",
+  "show_all_ips": "Afficher les IPv4 et IPv6",
+  "show_ipv4_ips": "Afficher les IPv4",
+  "show_ipv6_ips": "Afficher les IPv6",
+  "ipv4_ipv6_filter_title": "Filtre IPv4/IPv6",
   "ip_taskpending_label": "Tâche en cours",
   "optional": "Optionnel",
   "ip_required_field": "champ requis",
